--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@jccdex/jingtum-lib": "^0.1.3"
+    "@jccdex/jingtum-lib": "^0.1.3",
+    "tp-js-sdk": "^3.7.5"
   },
   "files": [
     "lib"
